# tbxtools

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py  wip_setup.py
.github/workflows/: newsfragments.yml
fixers/: fix_float_imports.py  fix_future_imports.py  fix_logger_format.py  fix_tbxy_imports.py  float_future_imports.py
newsfragments/: XXX.feature
src/tbxtools/: __init__.py  info_tools.py  model.py  repr.py
src/tbxtools/tbx2cmake/: build_info.yaml  import_env.py  intercept.py  read_scons.py  sconsemu.py  utils.py  write_cmake.py
tbxtools/: __init__.py  info_tools.py  model.py  repr.py
tbxtools/tbx2cmake/: build_info.yaml  import_env.py  read_scons.py  sconsemu.py  utils.py  write_cmake.py
test/: test_distribution.py
test/fake_distribution/: note.txt
test/fake_distribution/bad_dep_module/: libtbx_config
test/fake_distribution/i_have_optional_dependencies/: libtbx_config
test/fake_distribution/root_module/: libtbx_config
