[tool.poetry]
name = "tbxtools"
version = "0.1.0"
description = ""
authors = ["Nicholas Devenish <ndevenish@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fissix = "^21.6.0"
bowler = "^0.9.0"
PyYAML = "^6.0.2"
docopt = "^0.6.2"
networkx = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry_core>=1.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile="black"

[tool.poetry.scripts]
tbx-expand-deps = "tbxtools.info_tools:run_expand_dependencies"
tbx2depfile = "tbxtools.tbx2cmake.read_scons:main"
tbx2cmake = "tbxtools.tbx2cmake.write_cmake:main"
